Fix code smells
- Replace lambda with method reference, eg Integer::parseInt, card::get
- Use toList() instead of Collectors
- Immediate return
- Remove parantheses around lambda parameter
- Use default visibility of JUnit5 class
- Use isZero() and isOne() in Unit tests
- if-then-else return -> replace by single return
- Missing assertions with assertThat